# gedlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  problems.md  setup_tutorial.md
src/: CMakeLists.txt
src/edit_costs/: edit_costs.hpp  edit_costs.ipp  geometric.hpp  geometric.ipp  non_symbolic.hpp  non_symbolic.ipp
src/env/: common_types.hpp  ged_data.hpp  ged_data.ipp  ged_env.gxl.cpp  ged_env.hpp  ged_env.ipp
src/methods/: ml_based_method.ipp
src/util/: metric.hpp  metric.ipp  misc.hpp  misc.ipp
tests/: hello_ged.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/: CMakeLists.txt  ged_computation_tests.cpp
